subpage no longer send unnecesary page id
