# server/swagger_server/swagger/swagger.yaml
@@ -98,13 +98,21 @@ paths:
         "400":
           description: page (Login) already exists
       x-openapi-router-controller: swagger_server.controllers.page_controller
+  /page/{id_page}:
     get:
       tags:
       - page
       summary: returns the requested page
       description: returns page that user/admin sent request for
       operationId: get_page
-
+      parameters:
+        - name: id_page
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
       responses:
         "200":
           description: succesful operation
@@ -115,9 +123,6 @@ paths:
         "404":
           description: Page not found
           
-      security:
-      - bearerAuth:
-        - security
       x-openapi-router-controller: swagger_server.controllers.page_controller
   /page/meta:
     patch:
@@ -1083,10 +1088,6 @@ components:
           type: integer
           format: int64
           example: 1
-        subpage:
-          type: integer
-          format: int64
-          example: 5
         alias:
           type: string
           example: gallery_section
@@ -1109,7 +1110,6 @@ components:
           type: object
           additionalProperties: true
       example:
-        subpage: 5
         images:
         - id: 1
           page: 2
@@ -1137,10 +1137,6 @@ components:
           type: integer
           format: int64
           example: 1
-        page:
-          type: integer
-          format: int64
-          example: 10
         meta:
           $ref: '#/components/schemas/MetaSubpage'
         sections:
@@ -1157,7 +1153,6 @@ components:
           description: About description
           title: About
         id: 1
-        page: 10
         value: ""
         sections:
         - subpage: 5
@@ -1223,10 +1218,6 @@ components:
           type: integer
           format: int64
           example: 1
-        page:
-          type: integer
-          format: int64
-          example: 10
         alias:
           type: string
           example: Google Photos
@@ -1286,7 +1277,6 @@ components:
             description: About description
             title: About
           id: 1
-          page: 10
           value: ""
           sections:
           - subpage: 5
@@ -1325,7 +1315,6 @@ components:
             description: About description
             title: About
           id: 1
-          page: 10
           value: ""
           sections:
           - subpage: 5
@@ -1433,10 +1422,6 @@ components:
           type: integer
           format: int64
           example: 1
-        page:
-          type: integer
-          format: int64
-          example: 2
         image:
           type: string
           example: https://i.ibb.co/R3JhM0J/Group-1-min.jpg
@@ -1450,7 +1435,6 @@ components:
         image: https://i.ibb.co/R3JhM0J/Group-1-min.jpg
         alt: Alternative text
         id: 1
-        page: 2
         title: Title of image
     subpage_body:
       required:
